# linux-3d-cube

./: .gitignore  README.md  main.cpp  test_raylib  test_raylib.cpp
include/: controller.h  cube.h  renderer.h  scrambler.h  solver.h
new-cube/: CMakeLists.txt
new-cube/include/: controller.h  cube.h  renderer.h
new-cube/src/: controller.cpp  cube.cpp  main.cpp  renderer.cpp  scrambler.cpp
src/: controller.cpp  cube.cpp  main.cpp  renderer.cpp  scrambler.cpp  solver.cpp
